--- a/TODO
+++ b/TODO
@@ -1,8 +1,3 @@
-# Ask
-- chceme jar/jeseň alebo leto/zima? autumn/spring má veľkú výhodu, že je v abecede v správnom poradí :-)
-- chceme zosypať zadania a vzoráky do jedného? Kvík je za
-- bude task01.md, solution01.md, task02.md, solution02.md ...
-
 # Known issues
 - v \num sa typesetuje hnusná čiarka
 - finetunovať polohy vecí v headeri
@@ -13,5 +8,5 @@
 
 # Style
 - Kam chceme písať footnote (pred vs za bodku)?
-- Obrázky po novom treba trimovať. A basta.
 - Chceme arabské alebo rímske číslice v ročníku?
+- Treba opakovať zadanie vo vzoráku (teraz KMS, FKS a UFO áno; KSP a Prask nie)
