--- a/core/dgs-custom.sty
+++ b/core/dgs-custom.sty
@@ -67,12 +67,12 @@
 
 \fancypagestyle{problems}{%
     \pagestyle{main}
-    \fancyhead[LE,RO]{\textit{Zadania \currentRound. kola \currentPartGenitive\ časti -- \currentDeadline}}
+    \fancyhead[LE,RO]{\textit{Zadania \currentRound. kola \currentSemesterGenitive\ časti -- \currentDeadline}}
 }
 
 \fancypagestyle{solutions}{%
     \pagestyle{main}
-    \fancyhead[LE,RO]{\textit{Riešenia \currentRound. kola \currentPartGenitive\ časti}}
+    \fancyhead[LE,RO]{\textit{Riešenia \currentRound. kola \currentSemesterGenitive\ časti}}
 }
 
 \fancypagestyle{rules}{%
