--- a/core/templates/problems.tex
+++ b/core/templates/problems.tex
@@ -14,7 +14,7 @@
 	\vspace*{2em}
 
     {
-        \section{\texorpdfstring{Zadania \currentRound. kola \currentPartGenitive\ časti}{}}
+        \section{\texorpdfstring{Zadania \currentRound. kola \currentSemesterGenitive\ časti}{}}
 		\centering
 		\vspace{-1.3em}
         {Termín odoslania \currentDeadline}\\[2pt]
