--- a/core/templates/solutions.tex
+++ b/core/templates/solutions.tex
@@ -13,7 +13,7 @@
 	\thispagestyle{first}
 	\vspace*{2em}
    
-    \section{\texorpdfstring{Riešenia \currentRound. kola \currentPartGenitive\ časti}{}}
+    \section{\texorpdfstring{Riešenia \currentRound. kola \currentSemesterGenitive\ časti}{}}
         
     \pagestyle{problems}    
 	\loadSolutionsStyle
