--- a/core/templates/tests.tex
+++ b/core/templates/tests.tex
@@ -5,8 +5,8 @@
     Seminar full name: |\seminarFull|\\
     
     Current year: |\currentYear|\\
-    Current part: |\currentPart|\\
-    Current part (genitive): |\currentPartGenitive|\\
+    Current part: |\currentSemester|\\
+    Current part (genitive): |\currentSemesterGenitive|\\
     Current series: |\currentSeries|\\        
     Current deadline: |\currentDeadline|\\
     
