--- a/core/dgs.sty
+++ b/core/dgs.sty
@@ -30,26 +30,10 @@
     %showframe                                              % zobraziť frame
 ]{geometry}
 
-\RequirePackage[
-    separate-uncertainty,                                   % 7.2 ± 0.5
-    detect-all              = true,                         % chceme zachovávať formátovanie prostredia
-    multi-part-units        = single,                       % 12.3 ± 0.2 kg, neopakovať "kg"
-    per-mode                = reciprocal,                   % symbol pre "m/s", reciprocal pre "ms^{-1}"
-    group-separator         = {\,},
-    group-minimum-digits    = 5,
-    inter-unit-product      = {\kern 0.05em},               % veľmi tenká medzera medzi jednotkami
-    exponent-product        = \cdot,                        % \times pre 5×10^7, \cdot pre 5.1O^7    
-    number-unit-product     = {\,},                         % medzera medzi číslom a jednotkou
-    output-decimal-marker   = {,},                          % v desatinných číslach chceme slovenskú čiarku
-    range-units             = single,
-    range-phrase            = { -- },						% 5 -- 10 m/s
-    list-units              = single,                       %
-    list-final-separator    = {\ a\ },                      % 5, 7 a 10 m/s
-]{siunitx}
 
 \RequirePackage{
     amsmath,
-    amssymb,
+    siunitx,
 	xparse,
     enumitem,
     graphicx,
@@ -72,6 +56,8 @@
 	animate,
 	skull,
     etoolbox,
+    MnSymbol,
+    fancyhdr,
 	hyphenat,
     fancyvrb                                                % fancy verbatim (currently unused)
 }
@@ -83,14 +69,28 @@
 
 \definecolor{colour-url}{RGB}{0, 137, 162}
 \definecolor{colour-link}{RGB}{0, 137, 162}
+\sisetup{
+    separate-uncertainty,                                   % 7.2 ± 0.5
+    detect-all              = true,                         % chceme zachovávať formátovanie prostredia
+    multi-part-units        = single,                       % 12.3 ± 0.2 kg, neopakovať "kg"
+    per-mode                = reciprocal,                   % symbol pre "m/s", reciprocal pre "ms^{-1}"
+    group-separator         = {\,},
+    group-minimum-digits    = 5,
+    inter-unit-product      = {\kern 0.05em},               % veľmi tenká medzera medzi jednotkami
+    exponent-product        = \cdot,                        % \times pre 5×10^7, \cdot pre 5.1O^7    
+    number-unit-product     = {\,},                         % medzera medzi číslom a jednotkou
+    output-decimal-marker   = {\text{,}},                   % v desatinných číslach chceme slovenskú čiarku
+    range-units             = single,
+    range-phrase            = {\text{--}},					% 5 -- 10 m/s
+    list-units              = single,                       %
+    list-final-separator    = {\ a\ },                      % 5, 7 a 10 m/s
+}
 
 \RequirePackage[
 	colorlinks				= true,
 	linkcolor				= colour-link,
 	urlcolor				= colour-url,
 ]{hyperref}
-
-\RequirePackage{fancyhdr}                                   % fancy header
 
 \RequirePackage[all]{nowidow}
 
@@ -100,6 +100,18 @@
 \RequirePackage{polyglossia}                                % multi-language support
 \RequirePackage{xunicode}
 \setdefaultlanguage{slovak}
+
+% Disgusting hacks to bypass idiotic limitations of LaTeX -- 16 alphabets per document
+\makeatletter
+\NewDocumentCommand{\padzero}{m m}{\@anim@pad{#1}{#2}}
+
+\def\new@mathgroup{\alloc@8\mathgroup\mathchardef\@cclvi}
+\patchcmd{\document@select@group}{\sixt@@n}{\@cclvi}{}{}
+\patchcmd{\select@group}{\sixt@@n}{\@cclvi}{}{}
+
+\mathcode`\%="7025
+
+\makeatother
 
 % Setup fonts -- see fontspec/mathspec documentation.
 % Fonty sa načítavajú zo súborov .ttf a .otf (v žiadnom prípade nepoužívame systémové fonty)
@@ -152,16 +164,6 @@
 \NewDocumentCommand{\lang}{O{en} +m}{%
 	\ifstrequals{#1}{\currentLanguage}{#2}{}%
 }
-
-% Disgusting hacks to bypass idiotic limitations of LaTeX -- 16 alphabets per document
-\makeatletter
-\NewDocumentCommand{\padzero}{m m}{\@anim@pad{#1}{#2}}
-
-\def\new@mathgroup{\alloc@8\mathgroup\mathchardef\@cclvi}
-\patchcmd{\document@select@group}{\sixt@@n}{\@cclvi}{}{}
-\patchcmd{\select@group}{\sixt@@n}{\@cclvi}{}{}
-
-\makeatother
 
 % \romanNumeral{number}
 % Rímske číslo
