Vector and copy script

--- a/core/dgs-custom.sty
+++ b/core/dgs-custom.sty
@@ -36,6 +36,8 @@
 \setlength{\textfloatsep}{0mm}
 \setlength{\LTcapwidth}{0.8\textwidth}
 
+\RenewDocumentCommand{\vec}{m}{\vv{#1}}
+
 \setlist[description]{
     style           = multiline,
     labelindent     =       8mm,
