--- a/core/config/dgs-config-UFO.sty
+++ b/core/config/dgs-config-UFO.sty
@@ -1,7 +1,7 @@
 \NeedsTeXFormat{LaTeX2e}[2011/01/01]
 \ProvidesPackage{dgs-config-ufo}[2015/10/04 Trojsten unified TeX -- configuration file for UFO]
 
-\RenewDocumentCommand{\seminarID}{}{ufo}
+\RenewDocumentCommand{\seminarID}{}{UFO}
 \RenewDocumentCommand{\seminarShort}{}{UFO}
 \RenewDocumentCommand{\seminarFull}{}{Korešpondenčný seminár UFO}
 \RenewDocumentCommand{\seminarURL}{}{https://ufo.fks.sk/}
