Updated manual, hacked into hacks

--- a/core/config/dgs-config-UFO.sty
+++ b/core/config/dgs-config-UFO.sty
@@ -15,3 +15,7 @@
 \RenewDocumentCommand{\getProblemCategories}{m}{}
 
 \RenewDocumentCommand{\smallLogoRaise}{}{-2pt}
+
+\sisetup{
+    per-mode = symbol
+}
