Experimenting with Jinja2

--- a/core/templates/FKS/invite.tex
+++ b/core/templates/FKS/invite.tex
@@ -1,4 +1,4 @@
-Mil\genderSwitch{ý}{á} riešiteľ\genderSwitch{}{ka},
+Mil(@ if child.male @)ý(@ else @)á(@ endif @) riešiteľ(@ if child.male @)(@ else @)ka(@ endif @),
 
 v~korešpondenčnej časti si dosiah\genderSwitch{ol}{la} výborné výsledky, gratulujeme a~týmto Ťa pozývame ako
 \participantTypeAccusative na \currentVolume . sústredenie \currentSeminar. Prosím, pošli návratku čo najrýchlejšie \emph{a to aj v~prípade, že na sústredenie neprídeš}.
@@ -6,7 +6,7 @@ v~korešpondenčnej časti si dosiah\genderSwitch{ol}{la} výborné výsledky, g
 \section{Informácie}
 
 \begin{itemize}
-    \item Prihlasovací formulár nájdeš na stránke \hyperref{http://goo.gl/forms/z91tYWlOuP}. Poprípade pošli údaje \emph{e-mailom} na \URL{\emailContact}.
+    \item Prihlasovací formulár nájdeš na stránke \hyperref{http://goo.gl/forms/z91tYWlOuP}. Prípadne pošli údaje \emph{e-mailom} na \URL{\emailContact}.
     \item Prihlasovať sa môžeš do \emph{\deadlineReturn}. 
     \item Sústredenie sa bude konať v~\accomodation (\URL{\accomodationURL}).
     \item Cena sústredenia nepresiahne \emph{\cena}\ (v~cene je zarátaná strava, ubytovanie, doprava z~mesta \mestoZraz\ do \accomodation\ a späť do mesta \mestoRozchod), platí sa na mieste.
