--- a/core/templates/FKS/rules.tex
+++ b/core/templates/FKS/rules.tex
@@ -27,7 +27,7 @@
     
         \item Do pozornosti dávame aj špeciálnu kategóriu FX (\URL{http://fks.sk/fx}),
             ktorá je určená skutočným labužníkom. Výsledky z~FX sa k~celkovým FKS výsledkom 
-            pripočítavajú iba vtedy, ak si riešil kategóriu \textbf{A}~a~dosiahol si aspoň \emph{25\% bodov} najlepšieho riešiteľa.
+            pripočítavajú iba vtedy, ak si riešil kategóriu \textbf{A}~a~dosiahol si aspoň \emph{\SI{25}{\percent} bodov} najlepšieho riešiteľa.
             Tým sa po skončení korešpondenčnej časti k~normálnym bodom \emph{pripočítajú body
             získané v~FX} za príslušné obdobie. Okrem toho máme pre teba ďalšiu skvelú ponuku.
             Ak samostatne v~kategórii FX dosiahneš v~danom polroku aspoň \emph{polovicu plného počtu
