--- a/core/dgs-utils.sty
+++ b/core/dgs-utils.sty
@@ -3,11 +3,6 @@
 
 \NewDocumentCommand{\URL}{m}{\href{#1}{\texttt{#1}}}
 
-% Tabular environments
-\newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
-\newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
-\newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
-
 % package siunitx -- custom units
 \DeclareSIUnit{\gforce}{g}
 \DeclareSIUnit{\year}{y}
@@ -16,21 +11,17 @@
 \DeclareSIUnit{\year}{y}
 \DeclareSIUnit{\eur}{€}
 
-% Math shorthands
-\DeclareMathOperator{\diff}{d\!}
-\DeclareMathOperator{\pdiff}{\partial\!}
+\NewDocumentCommand{\romanNumeral}{m}{\uppercase\expandafter{\romannumeral#1\relax}}
+\NewDocumentCommand{\errorMessage}{+m}{\colorbox{red}{#1}}
+\NewDocumentCommand{\todoMessage}{+m}{\colorbox{cyan}{#1}}
 
-\NewDocumentCommand{\slashfrac}{m m}{\left.#1\middle/#2\right.}
-\NewDocumentCommand{\derive}{O{} m m}{\frac{\diff^{#1}#2}{\diff#3^{#1}}}
-\NewDocumentCommand{\pderive}{O{} m m}{\frac{\partial^{#1} #2}{\partial #3^{#1}}}
-
-\NewDocumentCommand{\integrate}{O{} O{} m m}{\int\limits_{#1}^{#2} \! #3 \, \diff#4}
-\NewDocumentCommand{\iintegrate}{O{} O{} m m m}{\iint\limits_{#1}^{\quad#2} #3 \diff#4\!\diff#5}
-\NewDocumentCommand{\iiintegrate}{O{} O{} m m m m}{\iiint\limits_{#1}^{\quad#2} #3 \diff#4\!\diff#5\!\diff#6}
-
-\NewDocumentCommand{\labelmath}{O{} +m}{
-	\begin{equation}%
-		#2%
-		\ifstrempty{#1}{}{\label{#1}}%
-	\end{equation}%
+% Protected input -- \input entire file or typeset a warning message saying that it does not exist
+\NewDocumentCommand{\protectedInput}{m}{%
+    \IfFileExists{#1}{%
+        \input{#1}%
+    }{%
+        \errorMessage{MISSING FILE \texttt{#1}!}\\%
+    }%
 }
+
+
