--- a/core/config/dgs-config.sty
+++ b/core/config/dgs-config.sty
@@ -44,7 +44,7 @@
 \NewDocumentCommand{\currentYear}{}{\the\numexpr\seminarFounded+\currentVolume\relax}
 \NewDocumentCommand{\currentAcademicYear}{}{\the\numexpr\currentYear-1\relax/\currentYear}
 
-\NewDocumentCommand{\rootDirectory}{}{<undefined directory>}
+\NewDocumentCommand{\rootDirectory}{}{input}
 
 \NewDocumentCommand{\getProblemCategories}{m}{}
 
