Tossing shit around

--- a/modules/seminar/templates/problems.tex
+++ b/modules/seminar/templates/problems.tex
@@ -1,8 +1,9 @@
 \documentclass[12pt, twoside]{article}
 
-\usepackage{core/dgs}
-\usepackage{core/config/dgs-config}
+\RequirePackage{core/dgs}
+\RequirePackage{core/config/dgs-config}
 \RequirePackage{modules/seminar/seminar}
+\input{input/(* seminar.id *)/(* volume.id *)/(* semester.id *)/(* round.id *)/root.sty}
 
 \loadDocumentSettings
 \usepackage{core/dgs-custom}
