--- a/modules/seminar/styles/FKS/templates/intro.tex
+++ b/modules/seminar/styles/FKS/templates/intro.tex
@@ -6,7 +6,7 @@ iba klasické učebnicové príklady, ale hlavne zaujímavé experimenty či sit
 ktoré poznáme z~bežného života. Skrátka, snažíme sa ukázať, že fyzika nie je
 nudná a nezaujímavá, ba dokonca ani taká ťažká, ako sa občas zdá.
 
-Máme za sebou už \the\numexpr\currentVolume-1\relax\ ročníkov FKS a za tento čas sa ukázalo, že skúsenosti
+Máme za sebou už (* volume.id - 1 *) ročníkov FKS a za tento čas sa ukázalo, že skúsenosti 
 získané jeho riešením sú užitočné nielen v~škole, ale aj v~rôznych súťažiach, či
 pri prijímacích skúškach na vysoké školy. V~oboch dosahujú naši riešitelia
 výborné výsledky -- študujú na najlepších školách u~nás i v~zahraničí,
@@ -16,7 +16,7 @@ nosia cenné medaily.
 
 Súťaž prebieha korešpondenčnou formou. V~rukách držíte zadania prvej série úloh.
 Ich riešenia (\emph{celý postup, nie len výsledok}) nám pošlite do stanoveného termínu
-buď poštou, alebo elektronicky (\URL{\seminarSubmitURL}). Riešenia opravíme,
+buď poštou, alebo elektronicky (\URL{(* seminar.submitURL *)}). Riešenia opravíme,
 obodujeme a spolu so vzorovými riešeniami pošleme späť. Takto prebehnú do
 decembra tri série súťaže, na základe ktorých vyberieme tých najlepších na
 januárové sústredenie (prvých 12 z~každej kategórie, v~prípade nezáujmu
@@ -28,6 +28,6 @@ venovaných fyzike zažijete skvelú zábavu, akčné hry, večery pri gitare,
 nechýbajú ani divadlá, počúvanie poplašných správ v~dedinskom rozhlase, nočná
 hra, \dots\ Hlavne však spoznáte skvelých ľudí! Ak aj fyzika nebola vždy vašou
 obľúbenou disciplínou, zistíte, že fyzici sú super.  Všetky informácie o~FKS
-vrátane fotiek zo sústredka nájdeš na \URL{\seminarURL}.
+vrátane fotiek zo sústredka nájdeš na \URL{(* seminar.URL *)}.
 
 \hfill \emph{Veľa zdaru Ti prajú Tvoji vedúci!}%
