--- a/modules/seminar/templates/solutions.tex
+++ b/modules/seminar/templates/solutions.tex
@@ -1,23 +1,22 @@
 \documentclass[12pt, twoside]{article}
 
-\usepackage{core/dgs}
-\usepackage{core/config/dgs-config}
-\RequirePackage{modules/seminar/seminar}
+\RequirePackage{core/dgs}
+\RequirePackage{core/config/dgs-config}
+\RequirePackage{core/dgs-custom}
+\input{input/(* seminar.id *)/(* volume.id *)/(* semester.id *)/(* round.id *)/seminar.sty}
 
-\loadDocumentSettings
-\usepackage{core/dgs-custom}
-
+\newcounter{round}
 \newcounter{problem}
 
 \begin{document}            
     \loadRegularStyle
-	\thispagestyle{first}
-	\vspace*{2em}
+    \thispagestyle{first}
+    \vspace*{2em}
    
     \section{\texorpdfstring{Riešenia (* round.id *). kola (* semester.genitive *) časti}{Riešenia}}
         
     \pagestyle{problems}    
-	\loadSolutionsStyle
+    \loadSolutionsStyle
     %% for problem in round.problems
     \addSeminarSolution{(* seminar.id *)}{(* volume.id *)}{(* semester.id *)}{(* round.id *)}{(* problem.id *)}{(* problem.title *)}{(* problem.solutionBy *)}{(* problem.evaluation *)}{(* problem.genderSuffix *)}
     %% endfor
